--- a/stockweb/build.gradle
+++ b/stockweb/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'com.kh'
 version = '0.0.1-SNAPSHOT'
-description = 'my stockweb project'
+description = 'stock web service'
 
 java {
 	toolchain {
@@ -31,7 +31,7 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'	
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
