DB 관련 라이브러리 추가 및 설정

--- a/stockweb/src/main/resources/application.properties
+++ b/stockweb/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=stockweb
 
 django.url=http://localhost:8000/api
+
+# database settings
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=C##STOCK
+spring.datasource.password=STOCK
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
