--- a/stockweb/build.gradle
+++ b/stockweb/build.gradle
@@ -32,6 +32,12 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	
+	// DATABASE 관련 
+	// https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc11
+	implementation 'com.oracle.database.jdbc:ojdbc11:23.7.0.25.01'	
+	// https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'	
 }
 
 tasks.named('test') {
