DB 연동 작업, 리액트와 통신 추가

--- a/stockweb/src/main/resources/application.properties
+++ b/stockweb/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=C##STOCK
 spring.datasource.password=STOCK
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+
+# mybatis settings
+mybatis.configuration-properties.mapUnderscoreToCamelCase=True
