AOP 추가 : Logging 처리

--- a/secureapi/build.gradle
+++ b/secureapi/build.gradle
@@ -34,7 +34,15 @@ dependencies {
 	
 	/* 입력값 검증 로직을 위해 추가 */
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation
-	implementation 'org.springframework.boot:spring-boot-starter-validation'	
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	
+	/* AOP 처리를 위해 추가 */
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop
+	implementation 'org.springframework.boot:spring-boot-starter-aop:3.5.6'
+	
+	/* 암호화 처리를 위해 추가 */
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
+	implementation 'org.springframework.boot:spring-boot-starter-security'		
 }
 
 tasks.named('test') {
