DB 연동 - MyBatis, ojdbc

--- a/secureapi/build.gradle
+++ b/secureapi/build.gradle
@@ -42,7 +42,14 @@ dependencies {
 	
 	/* 암호화 처리를 위해 추가 */
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
-	implementation 'org.springframework.boot:spring-boot-starter-security'		
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	
+	/* DB 연동을 위해 추가 - MyBatis, OJDBC */
+	// https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
+	
+	// https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc11
+	implementation 'com.oracle.database.jdbc:ojdbc11'
 }
 
 tasks.named('test') {
