--- a/secureapi/src/main/resources/application.properties
+++ b/secureapi/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=secureapi
 
 spring.web.resources.add-mappings=false
+
+# database setting
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=C##SECUREAPI
+spring.datasource.password=SECUREAPI
