--- a/secureapi/src/main/resources/application.properties
+++ b/secureapi/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=C##SECUREAPI
 spring.datasource.password=SECUREAPI
+
+mybatis.configuration.map-underscore-to-camel-case=true
