--- a/todoapi/src/main/resources/application.properties
+++ b/todoapi/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 # MyBatis Configuration
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
-mybatis.type-aliases-package=com.kh.todoapi.vo
+mybatis.type-aliases-package=com.kh.todoapi.*.vo
